--- a/app/src/main/res/layout/homepage_rvmakanan.xml
+++ b/app/src/main/res/layout/homepage_rvmakanan.xml
@@ -8,7 +8,7 @@
         android:layout_width="@dimen/hpr.ukurangambar"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="7dp"
         android:backgroundTint="@color/semiwhite"
         app:cardElevation="5dp"
         app:cardCornerRadius="10dp">
