--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/be_vietnam_extrabold"
+                            android:fontFamily="@font/inter_bold"
                             android:text="Halo, Maulana!"
                             android:textColor="@color/dark_blue"
                             android:textSize="@dimen/hp.ukuranteksatas"
@@ -90,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:gravity="center"
-                android:fontFamily="@font/be_vietnam_extrabold"
+                android:fontFamily="@font/inter_bold"
                 android:text="Apa yang ingin anda Makan/Minum?"
                 android:textColor="@color/dark_blue"
                 android:textSize="@dimen/hp.ukuranteksinfo"
