--- a/app/src/main/res/layout/fragment_makanan.xml
+++ b/app/src/main/res/layout/fragment_makanan.xml
@@ -24,7 +24,7 @@
             android:textSize="@dimen/fh.ukuranteksjudul"
             android:textColor="@color/dark_blue"
             android:textStyle="bold"
-            android:fontFamily="@font/be_vietnam_extrabold"/>
+            android:fontFamily="@font/inter_bold"/>
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:boxBackgroundMode="outline"
@@ -96,6 +96,6 @@
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="3"
-            tools:listitem="@layout/homepage_rvmakanan"/>
+            tools:listitem="@layout/homepage_rvmenu"/>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
