--- a/app/src/main/res/layout/fragment_riwayat.xml
+++ b/app/src/main/res/layout/fragment_riwayat.xml
@@ -24,7 +24,7 @@
             android:textSize="@dimen/fh.ukuranteksjudul"
             android:textColor="@color/dark_blue"
             android:textStyle="bold"
-            android:fontFamily="@font/be_vietnam_extrabold"/>
+            android:fontFamily="@font/inter_bold"/>
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:boxBackgroundMode="outline"
@@ -43,6 +43,30 @@
                 android:textColorHint="@color/dark_blue"
                 android:textSize="@dimen/lp.ukuranteksinput" />
         </com.google.android.material.textfield.TextInputLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/friwxbtnfilter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="Filter"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:textColor="@color/dark_blue"/>
+            <TextView
+                android:id="@+id/friwxbtnubah"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:padding="8dp"
+                android:text="Ubah"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:textColor="@color/dark_blue"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -52,7 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:id="@+id/dataxdesc"
+                android:id="@+id/dataxtanggal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -60,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:id="@+id/dataxstok"
+                android:id="@+id/dataxjumlah"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <ImageView
