--- a/app/src/main/res/layout/homepage_rvkeranjang.xml
+++ b/app/src/main/res/layout/homepage_rvkeranjang.xml
@@ -53,14 +53,45 @@
                     android:textSize="@dimen/hp.ukuranteksinfo"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
+                <ImageView
+                    android:id="@+id/fkerximagemin"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:padding="5dp"
+                    android:layout_margin="5dp"
+                    android:src="@drawable/imagemin"
+                    app:layout_constraintTop_toBottomOf="@id/hpxjudul"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+                <TextView
+                    android:id="@+id/hpxjumlah"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="12dp"
+                    app:layout_constraintTop_toBottomOf="@id/hpxjudul"
+                    app:layout_constraintStart_toEndOf="@id/fkerximagemin"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:text="1"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textColor="@color/black"/>
+                <ImageView
+                    android:id="@+id/fkerximageplus"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:padding="5dp"
+                    android:src="@drawable/imageplus"
+                    app:layout_constraintTop_toBottomOf="@id/hpxjudul"
+                    app:layout_constraintStart_toEndOf="@id/hpxjumlah"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
                 <TextView
                     android:id="@+id/hpxharga"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:gravity="right"
                     app:layout_constraintTop_toBottomOf="@id/hpxjudul"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:text="Rp. 10000"
                     android:textSize="@dimen/hp.ukuranteksinfo"
                     android:textColor="@color/red"/>
@@ -76,27 +107,32 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:background="#bdbdbd" />
                 <TextView
-                    android:id="@+id/hpxjumlah"
+                    android:id="@+id/fkerxtxttotalharga"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="x50"
+                    android:text="Total harga :"
                     android:textSize="@dimen/hp.ukuranteksinfo"
                     android:textColor="@color/black"/>
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/hpxtotal"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:gravity="right"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/fkerxtxttotalharga"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="20-11-2022"
-                    android:textSize="@dimen/hp.ukuranteksinfo"/>
+                    android:text="Rp. 40000"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textColor="@color/red"
+                    android:textStyle="bold"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
