--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -39,13 +39,12 @@
                 android:paddingLeft="@dimen/lp.ukuranpaddinginput"
                 android:paddingRight="@dimen/lp.ukuranpaddinginput"
                 android:orientation="vertical">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginBottom="10dp"
-                    android:fontFamily="@font/be_vietnam_extrabold"
+                    android:fontFamily="@font/inter_bold"
                     android:text="Masukkan Data Anda"
                     android:textColor="@color/dark_blue"
                     android:textSize="@dimen/lp.ukuranfonttombol" />
@@ -61,7 +60,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
                     app:passwordToggleTint="@color/teal_200">
-
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/lpxusername"
                         android:layout_width="match_parent"
@@ -86,7 +84,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
                     app:passwordToggleTint="@color/dark_blue">
-
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/lpxpassword"
                         android:layout_width="match_parent"
@@ -100,6 +97,17 @@
                         android:textColorHint="@color/dark_blue"
                         android:textSize="@dimen/lp.ukuranteksinput" />
                 </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                    android:id="@+id/lpxtxtlupapass"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="Lupa Password?"
+                    android:textSize="@dimen/lp.ukuranteksinput"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:textColor="@color/red"
+                    android:textStyle="italic"/>
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/flxlinearbutton"
