--- a/app/src/main/res/layout/homepage_rvriwayat.xml
+++ b/app/src/main/res/layout/homepage_rvriwayat.xml
@@ -36,6 +36,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/imagefood"/>
+                <TextView
+                    android:id="@+id/friwxcheckinit"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"/>
             </androidx.cardview.widget.CardView>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/friwxconsjudul"
