--- a/app/src/main/res/layout/fragment_detail_pesanan.xml
+++ b/app/src/main/res/layout/fragment_detail_pesanan.xml
@@ -118,6 +118,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         android:background="#bdbdbd" />
                     <TextView
+                        android:id="@+id/dpxlabelpengiriman"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
