--- a/app/src/main/res/layout/fragment_detail_metode.xml
+++ b/app/src/main/res/layout/fragment_detail_metode.xml
@@ -33,16 +33,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:background="#bdbdbd" />
+
             <TextView
                 android:id="@+id/dmxlabel1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/dmxview0"
-                app:layout_constraintStart_toStartOf="parent"
+                android:fontFamily="@font/inter_semibold"
                 android:text="Bayar Tunai"
-                android:textSize="@dimen/fh.ukurantekssubjudul"
                 android:textColor="@color/dark_blue"
-                android:fontFamily="@font/inter_semibold"/>
+                android:textSize="@dimen/fh.ukurantekssubjudul"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dmxview0" />
+
             <TextView
                 android:id="@+id/dmxdataalamat"
                 android:layout_width="0dp"
@@ -120,7 +122,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/dmxconscod">
             <TextView
-                android:id="@+id/daxlabel2"
+                android:id="@+id/dmxlabel3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
@@ -133,7 +135,7 @@
                 android:id="@+id/dmxdataalamat3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/daxlabel2"
+                app:layout_constraintTop_toBottomOf="@id/dmxlabel3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/dmxradiotransfer"
                 android:text="Estimasi penyajian sekitar 1 Jam, waktu penyajian makanan menyesuaikan jumlah pesanan"
