--- a/app/src/main/res/layout/fragment_interface_home.xml
+++ b/app/src/main/res/layout/fragment_interface_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:id="@+id/fhomexconsmain"
-    tools:context=".Fragments.InterfaceHomeFragment">
+    tools:context=".Fragments.InterfaceMenuFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/interxconsimage"
         android:layout_width="match_parent"
